add form handling

--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -2,7 +2,10 @@ name: Network Access Issue Handler
 
 on:
   issues:
-    types: [opened]
+    types: [
+      opened
+      edited
+      ]
 
 jobs:
   process_access_request:
