--- a/.github/ISSUE_TEMPLATE/privatelink-consumer.yaml
+++ b/.github/ISSUE_TEMPLATE/privatelink-consumer.yaml
@@ -1,7 +1,7 @@
 name: Create PrivateLink Consumer (YAML)
 description: Create a security group for a PrivateLink consumer service using YAML
 title: "[SG] Create PrivateLink Consumer for: "
-labels: ["sg-request", "privatelink-consumer", "yaml"]
+labels: ["privatelink-consumer"]
 assignees:
   - netops-team
 
