--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -168,7 +168,7 @@ jobs:
       - name: Create Pull Request
         id: create_pr
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_GITHUB_ACTIONS }}
         run: |
           ISSUE_NUMBER="${{ steps.issue_data.outputs.issue_number }}"
           BRANCH="issue-${ISSUE_NUMBER}"
